--- a/index.html
+++ b/index.html
@@ -1477,7 +1477,7 @@
     <script>
         if ('serviceWorker' in navigator) {
             window.addEventListener('load', () => {
-                navigator.serviceWorker.register('/service-worker.js')
+                navigator.serviceWorker.register('/MENTIR_/service-worker.js')
                     .then(registration => {
                         console.log('Service Worker registrado correctamente:', registration.scope);
                     })
